add mailcatcher in docker-compose.yml, lines 47 to 51, and add in config/environments/development.rb in lines 48 to 50

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     volumes:
       - '.:/nosso_amigo_secreto'
     volumes_from:
-      - box
+      - box  
 
   website:
     depends_on:
@@ -43,8 +43,12 @@ services:
     image: busybox
     volumes:
       - /box
-
-
+  
+  mailcatcher:
+    image: yappabe/mailcatcher
+    ports:
+      - 1025:1025
+      - 1080:1080
 
 volumes:
   redis:
